log/build_2021-09-20_15-47-02/turtlebot3_dqn/stderr.log
  File "/home/tomas/code/thesis/turtlebot3_ws/install/turtlebot3_dqn/lib/python3.8/site-packages/turtlebot3_dqn/dqn_agent/dqn_agent.py", line 188
    r_path,
    ^
SyntaxError: invalid syntax

